# opus

./: .gitignore  CMakeLists.txt  opus.yml
src/: Default.h  Opus.cpp  Opus.h  SDLFailure.h  main.cpp
src/framework/: Constants.h  Framework.h  Libs.h
src/gizmo/: RGBColor.h  Tchotchke.cpp  Tchotchke.h
src/percipient/: CosmographerPercipient.cpp  CosmographerPercipient.h
src/semiotics/: paradigm.h
